# jumys

./: .env.dev  pyproject.toml
jumys/: db.sqlite3  manage.py
jumys/analytics/: models.py  signals.py  urls.py  views.py
jumys/analytics/migrations/: 0001_initial.py
jumys/companies/: admin.py  api_views.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
jumys/companies/migrations/: 0001_initial.py  0002_initial.py  0003_location_latitude_location_longitude.py  0004_alter_company_head_manager.py  0005_alter_city_name_alter_company_name_alter_street_name.py
jumys/core/: delete_company_confirm.html  forms.py  serializers.py  urls.py  utils.py  views.py
jumys/core/templates/: base.html  home.html  login.html  profile.html  register.html
jumys/follows/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
jumys/follows/migrations/: 0001_initial.py  0002_initial.py  0003_referenceletter_status.py
jumys/jumys/: asgi.py  celery.py  pytest.ini  settings.py  urls.py  views.py  wsgi.py
jumys/resumes/: Documentation_vLrmHns.odt
jumys/seekers/: api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
jumys/templates/: base.html  form.html  index.html  post.html  vacancy_delete.html  vacancy_detail.html
jumys/user_profile/: admin.py  models.py  urls.py  views.py
jumys/users/: admin.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
jumys/vacancies/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
(+95 files in other folders)
